ref: syntax and version fixes